removed overflow scroll to fix dropdowns

--- a/assets/styles/layout.sass
+++ b/assets/styles/layout.sass
@@ -29,7 +29,6 @@ html, body
   width: 100%
   min-width: 1211px
   height: 55px
-  overflow-x: scroll
   z-index: 1000
 
 #left, #right
